Made all files available!

--- a/Floquet_IBM.ipynb
+++ b/Floquet_IBM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +33,11 @@
     "n = 2 # number of particles (qubits)\n",
     "OffD_number = n-1 # number of permutations\n",
     "M = OffD_number\n",
-    "C0 = 0.1 # Parameter for the floquet interaction strength\n",
+    "C0 = 1.0/6.0 # Parameter for the floquet interaction strength\n",
     "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,n)]) # there are n elements in this array\n",
     "Omega = 1.0\n",
-    "Longit_h = np.array([1.5 + 0.5*(-1)**x for x in range(n)])\n",
+    "h0 = 1.0\n",
+    "Longit_h = h0*np.array([1.5 + 0.5*(-1)**x for x in range(n)])\n",
     "Vx = 1.0\n",
     "p = 2 # number of periods\n",
     "K = 2 # number of frequencies per permutation\n",
@@ -44,13 +45,13 @@
     "\n",
     "diags = (Omega/2)*Coeffs\n",
     "Gammas = diags\n",
-    "Gamma = OffD_number * Omega * C0 * K #  Gamma = M K max_i Gamma_i = (n-1) \\omega c\n",
+    "Gamma = OffD_number * C0 * K #  Gamma = M K max_i Gamma_i = (n-1) \\omega c\n",
     "Q = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +62,18 @@
     "        G = G*(2 + (-1)**iq[j])\n",
     "    return G*(C0 / 2)**q\n",
     "\n",
-    "#Gam = np.sum([Gammaf([x]) for x in np.arange(1, n)])\n",
-    "Gam = 3.0\n",
+    "Gam = np.sum([Gammaf([x]) for x in np.arange(1, n)])\n",
+    "#Gam = 3.0\n",
     "if Gam == 0:\n",
     "    GDt = 0.0\n",
     "else:\n",
     "    Delta_t = np.log(2)/Gam\n",
-    "    GDt = Gam*Delta_t\n",
-    "\n",
-    "Q=2"
+    "    GDt = Gam*Delta_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +82,8 @@
     "\n",
     "    # For single Z rotations (with h_i):\n",
     "    # manually reverse the order of qubits:\n",
-    "    hs_rev = hs[::-1]\n",
     "    for x in range(n):\n",
-    "        U0.rz(2*hs_rev[x]*ev_time , x)\n",
+    "        U0.rz(2*hs[x]*ev_time , x)\n",
     "\n",
     "    # For two-body ZZ interactions (with V_x):\n",
     "    for x in range(n-1):\n",
@@ -192,6 +190,7 @@
     "    U[1: , 1:] = unit\n",
     "    if dagger:\n",
     "        U = U.conj().T\n",
+    "    #print(f'The unitary is {unit}')\n",
     "    return UnitaryGate(U)\n",
     "\n",
     "# ================================= The controlled unitary Uc_P =============================== #\n",
@@ -247,7 +246,8 @@
     "        L = int( np.log2(n) )\n",
     "        N_qbits = n + Q * L # Total qubits = z qubits + i_q qubits + k_q qubits\n",
     "        \n",
-    "        ctr_qbits_subset = ctr_qbits[(i_sub_idx-1)*L:i_sub_idx*L]\n",
+    "        ctr_qbits_subset = ctr_qbits[(i_sub_idx - 1)*L:i_sub_idx*L]\n",
+    "        #Lctrs = len( ctr_qbits_subset )\n",
     "        # Making the controlled XX gate for the specific number of controlled qubits\n",
     "        cxxcirc = qk.QuantumCircuit(2 , name='cXX')\n",
     "        cxxcirc.x( range(2) )\n",
@@ -257,6 +257,9 @@
     "        if dagger:\n",
     "            for i in np.arange(n-1 , 0 , -1):\n",
     "                ibin = bin(i)[2:]\n",
+    "\n",
+    "                ibin = (L-len(ibin))*'0' +ibin\n",
+    "\n",
     "                zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
     "                for j in range(len(zer_ctrs)):\n",
     "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
@@ -266,8 +269,11 @@
     "        else:\n",
     "            for i in np.arange(1,n):\n",
     "                ibin = bin(i)[2:]\n",
-    "                #ibin = (Lctrs-len(ibin))*'0' +ibin \n",
+    "\n",
+    "                ibin = (L-len(ibin))*'0' +ibin \n",
+    "\n",
     "                zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
+    "                print(f'The zero controls are {zer_ctrs}')\n",
     "                for j in range(len(zer_ctrs)):\n",
     "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
     "                # This part needs to be fixed.. We need to \n",
@@ -285,19 +291,19 @@
     "    k_qbits = Circuit.qregs[k_qbits_idx]\n",
     "    q_qbits = Circuit.qregs[q_qbits_idx]\n",
     "    \n",
-    "    delta = 2*Omega*(Delta_t) # Dividing the angle by 2 for rz\n",
+    "    delta = -2*Omega*(Delta_t) # Dividing the angle by 2 for rz\n",
     "    phase = 2*Omega*current_time\n",
     "\n",
     "    if dagger:\n",
     "        for l in range(len(k_qbits)-1 , - 1 , -1):\n",
     "            if l > 0:\n",
-    "                for lk in range(l , -1 , 0):\n",
+    "                for lk in range(l , 0 , -1):\n",
     "                    Circuit.crz( delta/((lk+2)*(lk+1)) , q_qbits[l] , k_qbits[l-lk])\n",
     "            Circuit.crz( -(l+1)*delta/(l+2) , q_qbits[l]  , k_qbits[l])\n",
-    "            Circuit.rz(-1.0*phase , k_qbits[l])\n",
+    "            Circuit.crz(-1.0*phase , q_qbits[l] , k_qbits[l])\n",
     "    else:\n",
     "        for l in range(len(k_qbits)):\n",
-    "            Circuit.rz(phase , k_qbits[l])\n",
+    "            Circuit.crz(phase , q_qbits[l] , k_qbits[l])\n",
     "            Circuit.crz((l+1)*delta/(l+2) , q_qbits[l] , k_qbits[l])\n",
     "            if l > 0:\n",
     "                for lk in np.arange(1 , l+1):\n",
@@ -382,8 +388,8 @@
     "    Umap = UnitMap(mapping_vec , False)\n",
     "    \n",
     "    if dagger:\n",
-    "        for i in range(Q-1 , -1 , -1):\n",
-    "            Circuit.append(Umapdag , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
+    "        #for i in range(Q-1 , -1 , -1):\n",
+    "        #    Circuit.append(Umapdag , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
     "        for i in range(Q-1 , -1 , -1):\n",
     "            Circuit.ch(iq_qbits[i*L] , kq_qbits[i])\n",
     "        for i in range(Q-1 , -1 , -1):\n",
@@ -396,8 +402,8 @@
     "            Circuit.ch(iq_qbits[i*L] , kq_qbits[i])\n",
     "        for i in range(Q):\n",
     "            Circuit.cx(iq_qbits[i*L] , q_qbits[i])\n",
-    "        for i in range(Q):\n",
-    "            Circuit.append(Umap , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
+    "        #for i in range(Q):\n",
+    "        #    Circuit.append(Umap , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
     "    \n",
     "def W_gate(Circuit , current_time , kq_qbits_idx , iq_qbits_idx , z_qbits_idx , q_qbits_idx , dagger = False):\n",
     "    B_prepare( Circuit , kq_qbits_idx , iq_qbits_idx , q_qbits_idx , False )\n",
@@ -408,10 +414,10 @@
     "def A_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index ):\n",
     "    anc_qubits_index = 3\n",
     "    W_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , False )\n",
-    "    #R_gate( Circuit , kq_qbits_index , iq_qbits_index , anc_qubits_index , q_qbit_index )\n",
-    "    #W_gate( Circuit , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , True )\n",
-    "    #R_gate( Circuit , kq_qbits_index , iq_qbits_index , anc_qubits_index , q_qbit_index )\n",
-    "    #W_gate( Circuit , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , False )\n",
+    "    R_gate( Circuit , kq_qbits_index , iq_qbits_index , anc_qubits_index , q_qbit_index )\n",
+    "    W_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , True )\n",
+    "    R_gate( Circuit , kq_qbits_index , iq_qbits_index , anc_qubits_index , q_qbit_index )\n",
+    "    W_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , False )\n",
     "\n",
     "def Prepare_full_unitary( Circuit , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\n",
     "    kq_qbits = Circuit.qregs[kq_qbits_index]\n",
@@ -420,7 +426,7 @@
     "    # print( f'the r number is: {r_number}' )\n",
     "    for ri in range( r_number ):\n",
     "        A_gate( Circuit , ri*Delta_t , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index )\n",
-    "        Circuit.append( Diagonal_U0(Longit_h , Vx , Delta_t) , z_qbits )\n",
+    "        #Circuit.append( Diagonal_U0(Longit_h , Vx , Delta_t) , z_qbits )\n",
     "        #W_gate( Circuit , 0 , 1 , 2 , 4 , False )\n",
     "    # print( f'Circuit is prepared and ready for simulation' )\n",
     "\n",
@@ -467,14 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Circuit Prepared! The parameters are:  Vx = 1.0 , hs = [2. 1.] , Omega = 1.0 , C0 = 0.1 , Q = 2 , Gamma = 3.0 , Delta_t = 0.23104906018664842 , GDt = 0.6931471805599453\n"
+      "The zero controls are []\n",
+      "The zero controls are []\n",
+      "Circuit Prepared! The parameters are:  Vx = 1.0 , hs = [2. 1.] , Omega = 1.0 , C0 = 0.16666666666666666 , Q = 2 , Gamma = 0.08333333333333333 , Delta_t = 8.317766166719345 , GDt = 0.6931471805599454\n"
      ]
     }
    ],
@@ -509,23 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Gate Count: OrderedDict({'cx': 54, 'u': 36, 'ccx': 12, 'u2': 8, 'ry': 6, 'rz': 6, 'rzz': 5, 'cp': 2})\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_41250/187491996.py:2: DeprecationWarning: The 'qiskit.Aer' entry point is deprecated and will be removed in Qiskit 1.0. You should use 'qiskit_aer.Aer' directly instead.\n",
-      "  backend_sim = Aer.get_backend('qasm_simulator')\n"
+      "The gate depth is 103 , total number of qubits required is 10, the number of Toffoli gates is 12, and number of CNOTs is 52\n"
      ]
     }
    ],
@@ -535,19 +534,25 @@
     "transpiled_circuit = transpile(FullCirc, backend_sim)\n",
     "\n",
     "gate_count = transpiled_circuit.count_ops()\n",
-    "print(\"\\nGate Count:\", gate_count)"
+    "gate_depth = transpiled_circuit.depth()\n",
+    "Toffoli_count = gate_count.get('ccx' , 0)\n",
+    "CNOT_count = gate_count.get('cx' , 0)\n",
+    "#print(\"\\nGate Count:\", gate_count)\n",
+    "print(f'The gate depth is {gate_depth} , total number of qubits required is {Ntotal}, the number of Toffoli gates is {Toffoli_count}, and number of CNOTs is {CNOT_count}')\n",
+    "\n",
+    "#print(FullCirc.draw())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The job id is 07576fa9-d1ee-4c3b-a4f1-d31f2e494222\n"
+      "The job id is 9f997c57-b232-4a37-97f3-5bd2d7360d89\n"
      ]
     }
    ],
@@ -557,14 +562,14 @@
     "\n",
     "backend = provider.get_backend('ibm_strasbourg')\n",
     "Estimator = BackendEstimator(backend)\n",
-    "job = Estimator.run( [FullCirc]*len(Ops) , [Ops[i] for i in range(len(Ops))]  , shots = 500 )\n",
+    "job = Estimator.run( [FullCirc]*len(Ops) , [Ops[i] for i in range(len(Ops))]  , shots = 1000 )\n",
     "id=job.job_id()\n",
     "print(f'The job id is {id}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The values are [-0.012  0.036  0.936  0.988] and the metadata is [{'variance': 0.999856, 'shots': 500}, {'variance': 0.998704, 'shots': 500}, {'variance': 0.1239039999999999, 'shots': 500}, {'variance': 0.02385599999999999, 'shots': 500}]\n"
+      "The values are [ 0.     0.012 -0.108 -0.1  ] and the metadata is [{'variance': 1.0, 'shots': 500}, {'variance': 0.999856, 'shots': 500}, {'variance': 0.988336, 'shots': 500}, {'variance': 0.99, 'shots': 500}]\n"
      ]
     }
    ],
