--- a/Floquet_IBM.ipynb
+++ b/Floquet_IBM.ipynb
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "#====================== Circuit Paramters ===============\n",
-    "n = 2 # number of particles (qubits)\n",
+    "n = 4 # number of particles (qubits)\n",
     "OffD_number = n-1 # number of permutations\n",
     "M = OffD_number\n",
-    "C0 = 1.0/6.0 # Parameter for the floquet interaction strength\n",
+    "C0 = 1.0 # Parameter for the floquet interaction strength\n",
     "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,n)]) # there are n elements in this array\n",
     "Omega = 1.0\n",
     "h0 = 1.0\n",
@@ -46,12 +46,13 @@
     "diags = (Omega/2)*Coeffs\n",
     "Gammas = diags\n",
     "Gamma = OffD_number * C0 * K #  Gamma = M K max_i Gamma_i = (n-1) \\omega c\n",
+    "Gam = 1.0\n",
     "Q = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
     "        G = G*(2 + (-1)**iq[j])\n",
     "    return G*(C0 / 2)**q\n",
     "\n",
-    "Gam = np.sum([Gammaf([x]) for x in np.arange(1, n)])\n",
+    "#Gam = np.sum([Gammaf([x]) for x in np.arange(1, n)])\n",
     "#Gam = 3.0\n",
     "if Gam == 0:\n",
     "    GDt = 0.0\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +83,10 @@
     "\n",
     "    # For single Z rotations (with h_i):\n",
     "    # manually reverse the order of qubits:\n",
+    "    #hs_rev = hs[::-1]\n",
     "    for x in range(n):\n",
+    "        #U0.rz(2*hs_rev[x]*ev_time , x)\n",
     "        U0.rz(2*hs[x]*ev_time , x)\n",
-    "\n",
     "    # For two-body ZZ interactions (with V_x):\n",
     "    for x in range(n-1):\n",
     "        U0.cx(x , x+1)\n",
@@ -239,47 +241,41 @@
     "                    Circuit.x( ctr_qbits[zer_ctrs[j]] )\n",
     "\n",
     "def Uc_P( Circuit , ctr_qbits_idx , targ_qbits_idx , i_sub_idx , dagger):\n",
-    "# Assuming i_sub_idx refers to a specific block of register of size log2(n) qubits\n",
-    "    if i_sub_idx > 0:\n",
-    "        ctr_qbits = Circuit.qregs[ctr_qbits_idx]\n",
-    "        targ_qbits = Circuit.qregs[targ_qbits_idx]\n",
-    "        L = int( np.log2(n) )\n",
-    "        N_qbits = n + Q * L # Total qubits = z qubits + i_q qubits + k_q qubits\n",
-    "        \n",
-    "        ctr_qbits_subset = ctr_qbits[(i_sub_idx - 1)*L:i_sub_idx*L]\n",
-    "        #Lctrs = len( ctr_qbits_subset )\n",
-    "        # Making the controlled XX gate for the specific number of controlled qubits\n",
-    "        cxxcirc = qk.QuantumCircuit(2 , name='cXX')\n",
-    "        cxxcirc.x( range(2) )\n",
-    "        cxxGate = cxxcirc.to_gate()\n",
-    "        cxxGate = cxxGate.control(L)\n",
-    "        \n",
-    "        if dagger:\n",
-    "            for i in np.arange(n-1 , 0 , -1):\n",
-    "                ibin = bin(i)[2:]\n",
-    "\n",
-    "                ibin = (L-len(ibin))*'0' +ibin\n",
-    "\n",
-    "                zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
-    "                for j in range(len(zer_ctrs)):\n",
-    "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
-    "                Circuit.append( cxxGate , ctr_qbits_subset[:] + targ_qbits[i-1:i+1] )\n",
-    "                for j in np.arange(len(zer_ctrs)-1 , -1 , -1):\n",
-    "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
-    "        else:\n",
-    "            for i in np.arange(1,n):\n",
-    "                ibin = bin(i)[2:]\n",
-    "\n",
-    "                ibin = (L-len(ibin))*'0' +ibin \n",
-    "\n",
-    "                zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
-    "                print(f'The zero controls are {zer_ctrs}')\n",
-    "                for j in range(len(zer_ctrs)):\n",
-    "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
-    "                # This part needs to be fixed.. We need to \n",
-    "                Circuit.append( cxxGate , ctr_qbits_subset[:] + targ_qbits[i-1:i+1] )\n",
-    "                for j in range(len(zer_ctrs)):\n",
-    "                    Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
+    "    # Assuming i_sub_idx refers to a specific block of register of size log2(n) qubits\n",
+    "        if i_sub_idx > 0:\n",
+    "            ctr_qbits = Circuit.qregs[ctr_qbits_idx]\n",
+    "            targ_qbits = Circuit.qregs[targ_qbits_idx]\n",
+    "            L = int( np.log2(n) )\n",
+    "            N_qbits = n + Q * L # Total qubits = z qubits + i_q qubits + k_q qubits\n",
+    "            \n",
+    "            ctr_qbits_subset = ctr_qbits[(i_sub_idx-1)*L:i_sub_idx*L]\n",
+    "            # Making the controlled XX gate for the specific number of controlled qubits\n",
+    "            cxxcirc = qk.QuantumCircuit(2 , name='cXX')\n",
+    "            cxxcirc.x( range(2) )\n",
+    "            cxxGate = cxxcirc.to_gate()\n",
+    "            cxxGate = cxxGate.control(L)\n",
+    "            \n",
+    "            if dagger:\n",
+    "                for i in np.arange(n-1 , 0 , -1):\n",
+    "                    ibin = bin(i)[2:]\n",
+    "                    ibin = (L-len(ibin))*'0' +ibin \n",
+    "                    zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
+    "                    for j in range(len(zer_ctrs)):\n",
+    "                        Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
+    "                    Circuit.append( cxxGate , ctr_qbits_subset[:] + targ_qbits[i-1:i+1] )\n",
+    "                    for j in np.arange(len(zer_ctrs)-1 , -1 , -1):\n",
+    "                        Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
+    "            else:\n",
+    "                for i in np.arange(1,n):\n",
+    "                    ibin = bin(i)[2:]\n",
+    "                    ibin = (L-len(ibin))*'0' +ibin  \n",
+    "                    zer_ctrs = [x for x in range(L) if(int(ibin[x]) == 0)]\n",
+    "                    for j in range(len(zer_ctrs)):\n",
+    "                        Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
+    "                    # This part needs to be fixed.. We need to \n",
+    "                    Circuit.append( cxxGate , ctr_qbits_subset[:] + targ_qbits[i-1:i+1] )\n",
+    "                    for j in range(len(zer_ctrs)):\n",
+    "                        Circuit.x( ctr_qbits_subset[zer_ctrs[j]] )\n",
     "\n",
     "# =============================== The controlled unitary Uc_Phi =================================== #\n",
     "# UC_Phi_Omega(k_qbits) generates the omega related phases on the k_q registers\n",
@@ -292,7 +288,7 @@
     "    q_qbits = Circuit.qregs[q_qbits_idx]\n",
     "    \n",
     "    delta = -2*Omega*(Delta_t) # Dividing the angle by 2 for rz\n",
-    "    phase = 2*Omega*current_time\n",
+    "    phase = -2*Omega*current_time\n",
     "\n",
     "    if dagger:\n",
     "        for l in range(len(k_qbits)-1 , - 1 , -1):\n",
@@ -304,6 +300,7 @@
     "    else:\n",
     "        for l in range(len(k_qbits)):\n",
     "            Circuit.crz(phase , q_qbits[l] , k_qbits[l])\n",
+    "            #Circuit.crz((l+1)*delta/(l+2) , q_qbits[l] , k_qbits[l])\n",
     "            Circuit.crz((l+1)*delta/(l+2) , q_qbits[l] , k_qbits[l])\n",
     "            if l > 0:\n",
     "                for lk in np.arange(1 , l+1):\n",
@@ -332,21 +329,21 @@
     "\n",
     "def U0_q_ctrl( Circuit , delta_t , q_qbits , z_qbits , dagger=False):\n",
     "    if dagger:\n",
-    "       for k in range(len(q_qbits)-1 , 0 , -1):\n",
-    "           CUk = Diagonal_U0( Longit_h , Vx , delta_t/((k+1)*(k+2)) )\n",
-    "           CUk = CUk.control()\n",
-    "           Circuit.append( CUk , [q_qbits[k]] + z_qbits[:] )\n",
-    "       CU0 = Diagonal_U0( Longit_h , Vx , -delta_t/(2.0) )\n",
-    "       CU0 = CU0.control()\n",
-    "       Circuit.append( CU0 , [q_qbits[0]] + z_qbits[:] )\n",
+    "        for k in range(len(q_qbits)-1 , 0 , -1):\n",
+    "            CUk = Diagonal_U0( Longit_h , Vx , delta_t/((k+1)*(k+2)) )\n",
+    "            CUk = CUk.control()\n",
+    "            Circuit.append( CUk , [q_qbits[k]] + z_qbits[:] )\n",
+    "        CU0 = Diagonal_U0( Longit_h , Vx , -delta_t/(2.0) )\n",
+    "        CU0 = CU0.control()\n",
+    "        Circuit.append( CU0 , [q_qbits[0]] + z_qbits[:] )\n",
     "    else:\n",
-    "       CU0 = Diagonal_U0( Longit_h , Vx , delta_t/(2.0) )\n",
-    "       CU0 = CU0.control()\n",
-    "       Circuit.append( CU0 , [q_qbits[0]] + z_qbits[:] )\n",
-    "       for k in np.arange(1, len(q_qbits)):\n",
-    "           CUk = Diagonal_U0( Longit_h , Vx , -delta_t/((k+1)*(k+2)) )\n",
-    "           CUk = CUk.control()\n",
-    "           Circuit.append( CUk , [q_qbits[k]] + z_qbits[:] )\n",
+    "        CU0 = Diagonal_U0( Longit_h , Vx , delta_t/(2.0) )\n",
+    "        CU0 = CU0.control()\n",
+    "        Circuit.append( CU0 , [q_qbits[0]] + z_qbits[:] )\n",
+    "        for k in np.arange(1, len(q_qbits)):\n",
+    "            CUk = Diagonal_U0( Longit_h , Vx , -delta_t/((k+1)*(k+2)) )\n",
+    "            CUk = CUk.control()\n",
+    "            Circuit.append( CUk , [q_qbits[k]] + z_qbits[:] )\n",
     "\n",
     "# UC_Phi(iq_qbits , z_qbits , q) generates the E_z_iq and E_z_ij related phases on |z>\n",
     "def Uc_Phi(Circuit  , iq_qbits_idx , z_qbits_idx , q_qbits_idx , dagger=False):\n",
@@ -426,7 +423,7 @@
     "    # print( f'the r number is: {r_number}' )\n",
     "    for ri in range( r_number ):\n",
     "        A_gate( Circuit , ri*Delta_t , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index )\n",
-    "        #Circuit.append( Diagonal_U0(Longit_h , Vx , Delta_t) , z_qbits )\n",
+    "        Circuit.append( Diagonal_U0(Longit_h , Vx , Delta_t) , z_qbits )\n",
     "        #W_gate( Circuit , 0 , 1 , 2 , 4 , False )\n",
     "    # print( f'Circuit is prepared and ready for simulation' )\n",
     "\n",
@@ -473,16 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The zero controls are []\n",
-      "The zero controls are []\n",
-      "Circuit Prepared! The parameters are:  Vx = 1.0 , hs = [2. 1.] , Omega = 1.0 , C0 = 0.16666666666666666 , Q = 2 , Gamma = 0.08333333333333333 , Delta_t = 8.317766166719345 , GDt = 0.6931471805599454\n"
+      "Circuit Prepared! The parameters are:  Vx = 1.0 , hs = [2. 1. 2. 1.] , Omega = 1.0 , C0 = 1.0 , Q = 2 , Gamma = 1.0 , Delta_t = 0.6931471805599453 , GDt = 0.6931471805599453\n"
      ]
     }
    ],
@@ -510,21 +505,21 @@
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n",
     "Prepare_full_unitary( FullCirc , kq_qbits_index, iq_qbits_index , z_qbits_index , q_qbits_index , 1 )\n",
     "\n",
-    "Ops = SparsePauliOp.from_list([('I'*(2*Q)+'XIII'+'I'*Q , 1) , ('I'*(2*Q)+'IXII'+'I'*Q , 1) , ('I'*(2*Q)+'ZIII'+'I'*Q , 1) , ('I'*(2*Q)+'IZII'+'I'*Q , 1)])\n",
+    "Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIIIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXIIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIIIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZIIII'+'I'*Q , 1)])\n",
     "\n",
     "print(f'Circuit Prepared! The parameters are:  Vx = {Vx} , hs = {Longit_h} , Omega = {Omega} , C0 = {C0} , Q = {Q} , Gamma = {Gam} , Delta_t = {Delta_t} , GDt = {Gam*Delta_t}') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The gate depth is 103 , total number of qubits required is 10, the number of Toffoli gates is 12, and number of CNOTs is 52\n"
+      "The gate depth is 868 , total number of qubits required is 18, the number of Toffoli gates is 270, and number of CNOTs is 564\n"
      ]
     }
    ],
@@ -545,14 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The job id is 9f997c57-b232-4a37-97f3-5bd2d7360d89\n"
+     "ename": "ValueError",
+     "evalue": "The number of qubits of the 0-th circuit (14) does not match the number of qubits of the 0-th observable (12).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[146], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m backend \u001b[38;5;241m=\u001b[39m provider\u001b[38;5;241m.\u001b[39mget_backend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mibm_strasbourg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m Estimator \u001b[38;5;241m=\u001b[39m BackendEstimator(backend)\n\u001b[0;32m----> 6\u001b[0m job \u001b[38;5;241m=\u001b[39m \u001b[43mEstimator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mFullCirc\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mOps\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mOps\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mOps\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m  \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshots\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39mjob\u001b[38;5;241m.\u001b[39mjob_id()\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe job id is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mid\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/qiskit/primitives/base/base_estimator.py:180\u001b[0m, in \u001b[0;36mBaseEstimator.run\u001b[0;34m(self, circuits, observables, parameter_values, **run_options)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Run the job of the estimation of expectation value(s).\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \n\u001b[1;32m    139\u001b[0m \u001b[38;5;124;03m``circuits``, ``observables``, and ``parameter_values`` should have the same\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;124;03m    ValueError: Invalid argument values given.\u001b[39;00m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    179\u001b[0m \u001b[38;5;66;03m# Validation\u001b[39;00m\n\u001b[0;32m--> 180\u001b[0m circuits, observables, parameter_values \u001b[38;5;241m=\u001b[39m \u001b[43mvalidation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_estimator_args\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    181\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcircuits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobservables\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameter_values\u001b[49m\n\u001b[1;32m    182\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    184\u001b[0m \u001b[38;5;66;03m# Options\u001b[39;00m\n\u001b[1;32m    185\u001b[0m run_opts \u001b[38;5;241m=\u001b[39m copy(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions)\n",
+      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/qiskit/primitives/base/validation.py:64\u001b[0m, in \u001b[0;36m_validate_estimator_args\u001b[0;34m(circuits, observables, parameter_values)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;66;03m# Cross-validation\u001b[39;00m\n\u001b[1;32m     63\u001b[0m _cross_validate_circuits_parameter_values(circuits, parameter_values)\n\u001b[0;32m---> 64\u001b[0m \u001b[43m_cross_validate_circuits_observables\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcircuits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobservables\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m circuits, observables, parameter_values\n",
+      "File \u001b[0;32m~/Dropbox/Research/Itay/QuantumCircuits/Qiskit/qiskit_0.42/lib/python3.12/site-packages/qiskit/primitives/base/validation.py:204\u001b[0m, in \u001b[0;36m_cross_validate_circuits_observables\u001b[0;34m(circuits, observables)\u001b[0m\n\u001b[1;32m    202\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, (circuit, observable) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mzip\u001b[39m(circuits, observables)):\n\u001b[1;32m    203\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m circuit\u001b[38;5;241m.\u001b[39mnum_qubits \u001b[38;5;241m!=\u001b[39m observable\u001b[38;5;241m.\u001b[39mnum_qubits:\n\u001b[0;32m--> 204\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    205\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe number of qubits of the \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-th circuit (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcircuit\u001b[38;5;241m.\u001b[39mnum_qubits\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) does \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    206\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot match the number of qubits of the \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-th observable \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    207\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mobservable\u001b[38;5;241m.\u001b[39mnum_qubits\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m).\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    208\u001b[0m         )\n",
+      "\u001b[0;31mValueError\u001b[0m: The number of qubits of the 0-th circuit (14) does not match the number of qubits of the 0-th observable (12)."
      ]
     }
    ],
