Added comments and docstrings

--- a/Floquet_IBM copy.ipynb
+++ b/Floquet_IBM copy.ipynb
@@ -78,24 +78,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def Diagonal_U0(hs , Vs , ev_time):\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    Input #1 (hs): an array f doubles hopping strengths \n",
-    "    Input #2 (Vs): a coupling strength V for all the XX interactions\n",
-    "    Input #3 (ev_time): the time of evolution\n",
-    "\n",
-    "    output: a unitary gate simulating the diagonal evolution U_0(t = ev_time)\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
     "    U0 = qk.QuantumCircuit(n + 1)\n",
     "\n",
+    "    # For single Z rotations (with h_i):\n",
+    "    # manually reverse the order of qubits:\n",
+    "    #hs_rev = hs[::-1]\n",
     "    for x in range(n):\n",
+    "        #U0.rz(2*hs_rev[x]*ev_time , x)\n",
     "        U0.rz(2*hs[x]*ev_time , x)\n",
-    "\n",
     "    # For two-body ZZ interactions (with V_x):\n",
     "    for x in range(n-1):\n",
     "        U0.cx(x , x+1)\n",
@@ -103,11 +94,32 @@
     "        U0.cx(x , x+1)\n",
     "    return U0.to_gate()\n",
     "\n",
+    "def Diagonal_U0_circ(Circuit , z_qbits_index,  hs , Vs , time):\n",
+    "    z_qbits = Circuit.qregs[z_qbits_index]\n",
+    "    # For single Z rotations (with h_i):\n",
+    "    for x in range(n):\n",
+    "        Circuit.cx(z_qbits[x] , z_qbits[n])\n",
+    "    Circuit.rz(2*hs[x]*time , z_qbits[n])\n",
+    "    for x in range(n):\n",
+    "        Circuit.cx(z_qbits[x] , z_qbits[n])\n",
+    "\n",
+    "    # For two-body ZZ interactions (with V_x):\n",
+    "    for x in range(n-1):\n",
+    "        Circuit.cx(z_qbits[x] , z_qbits[n])\n",
+    "        Circuit.cx(z_qbits[x + 1] , z_qbits[n])\n",
+    "    Circuit.rz(2*Vs*time , z_qbits[n])\n",
+    "    for x in range(n-1):\n",
+    "        Circuit.cx(z_qbits[x] , z_qbits[n])\n",
+    "        Circuit.cx(z_qbits[x + 1] , z_qbits[n])\n",
+    "\n",
     "# ---------------- The REFLECTION (R) about the zero state of Q+1 registers -----------\n",
     "# Note: We may have to do this on (Q+1)*log2(M) registers instead to\n",
     "#      make things for convenient to use\n",
     "\n",
     "def R_gate(Circuit , kq_qbits_idx , iq_qbits_idx , anc_qbit_idx , q_qbits_idx):\n",
+    "    #simulator = AerSimulator()\n",
+    "    #transcirc = qk.transpile(Circuit , simulator)\n",
+    "    #l0 = len(transcirc.count_ops())\n",
     "    kq_qbits = Circuit.qregs[kq_qbits_idx]\n",
     "    iq_qbits = Circuit.qregs[iq_qbits_idx]\n",
     "    anc_qbit = Circuit.qregs[anc_qbit_idx]\n",
@@ -131,11 +143,14 @@
     "    for i in range(len(q_qbits)):\n",
     "        Circuit.x(q_qbits[i])\n",
     "    Circuit.x(anc_qbit[0])\n",
+    "    # Useful functions:\n",
     "\n",
-    "# ----------------------------------------------------------------------------------------------------\n",
+    "# Gammaf computes Gamma_i_q! if i_q is a vector it will return the multiplication of all the sub-gammas\n",
+    "\n",
+    "#GDt = 0.05\n",
+    "\n",
     "# These two functions are used if we manually prepare the state without state preparation call from qiskit built-in functions\n",
     "# For now, we will use qiskit built-in functions (so these functions are not used!)\n",
-    "\n",
     "def Q_angle(Qq , i):\n",
     "    angle = 0.0\n",
     "    for q in np.arange(1 , Qq - i+1):\n",
@@ -196,18 +211,36 @@
     "# Note that iq_qbits register has Q*log2(n) number of qubits:\n",
     "#   The i_sub_idx is a variable to specify the permutation for the specific sub index of the iq_qbits\n",
     "\n",
+    "def Uc_P_old( Circuit , ctr_qbits_idx , targ_qbits_idx , i_sub_idx ):\n",
+    "    # Assuming i_sub_idx refers to a specific block of register of size log2(n) qubits\n",
+    "    if i_sub_idx > 0:\n",
+    "        ctr_qbits = Circuit.qregs[ctr_qbits_idx]\n",
+    "        targ_qbits = Circuit.qregs[targ_qbits_idx]\n",
+    "        L = int(np.log2(n))\n",
+    "        N_qbits = n + Q * L # Total qubits = z qubits + i_q qubits + k_q qubits\n",
+    "        \n",
+    "        ctr_qbits_subset = ctr_qbits[0:i_sub_idx*L]\n",
+    "        Lctrs = len( ctr_qbits_subset )\n",
+    "        \n",
+    "        # Making the controlled XX gate for the specific number of controlled qubits\n",
+    "        cxxcirc = qk.QuantumCircuit(2 , name='cXX')\n",
+    "        cxxcirc.x( range(2) )\n",
+    "        cxxGate = cxxcirc.to_gate()\n",
+    "        cxxGate = cxxGate.control(Lctrs)\n",
+    "        \n",
+    "        for i in np.arange(1,n):\n",
+    "            for k in range(i_sub_idx):\n",
+    "                ibin = bin(i + k*n)[2:]\n",
+    "                ibin = (Lctrs-len(ibin))*'0' +ibin \n",
+    "                zer_ctrs = [x for x in range(Lctrs) if(int(ibin[Lctrs-1 - x]) == 0)]\n",
+    "                for j in range(len(zer_ctrs)):\n",
+    "                    Circuit.x(ctr_qbits[zer_ctrs[j]])\n",
+    "                # This part needs to be fixed.. We need to \n",
+    "                Circuit.append( cxxGate , ctr_qbits[0:Lctrs] + targ_qbits[i-1:i+1] )\n",
+    "                for j in range(len(zer_ctrs)):\n",
+    "                    Circuit.x( ctr_qbits[zer_ctrs[j]] )\n",
+    "\n",
     "def Uc_P( Circuit , ctr_qbits_idx , targ_qbits_idx , i_sub_idx , dagger):\n",
-    "    \"\"\"\"\n",
-    "    This is a void function creating a controlled permutation on the circuit\n",
-    "\n",
-    "    Input (int) #1 (ctr_qbits_idx): The index of the register for the controlled qubits\n",
-    "    Input (int) #2 (targ_qbits_idx): The index of the register for the target qubits\n",
-    "    Input (int) #3 (i_sub_idx): The sub-index (q) for the i_q register to generate the controlled qubit\n",
-    "    Input (bool) #4 (dagger): Speficies whether the gate is hermitian conjugate of U_p or not \n",
-    "\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
     "    # Assuming i_sub_idx refers to a specific block of register of size log2(n) qubits\n",
     "        if i_sub_idx > 0:\n",
     "            ctr_qbits = Circuit.qregs[ctr_qbits_idx]\n",
@@ -249,16 +282,6 @@
     "# The only thing that needs to be tested in the Uc_Phi_Omega!\n",
     "\n",
     "def Uc_Phi_Omega(Circuit , current_time , k_qbits_idx , q_qbits_idx , dagger= False):\n",
-    "    \"\"\"\"\n",
-    "    This is a void function creating the omega dependent rotations \n",
-    "\n",
-    "    Input (QuantumCircuit) #0: The void variable which is a quantum circuit on which U_c\\omega is appended\n",
-    "    Input (double) #1 (current_time): Specifying the current time\n",
-    "    Input (int) #2 (k_qbits_idx): The index of the register for the k qubits\n",
-    "    Input (int) #3 (q_qbits_idx): The sub-index (q) for the i_q register to generate the controlled qubit\n",
-    "    Input (bool) #4 (dagger): Speficies whether the gate is hermitian conjugate of the gate or not \n",
-    "\n",
-    "    \"\"\"\n",
     "    # Apply i\\omega \\sum_l=j^q (-1)^k_l\n",
     "    # Omega is a global variable\n",
     "    k_qbits = Circuit.qregs[k_qbits_idx]\n",
@@ -283,19 +306,28 @@
     "                for lk in np.arange(1 , l+1):\n",
     "                    Circuit.crz(-delta/((lk+2)*(lk+1)) , q_qbits[l] , k_qbits[l - lk])\n",
     "\n",
-    "def U0_q_ctrl( Circuit , delta_t , q_qbits , z_qbits , dagger=False):\n",
+    "def Uc_Phi_Omega_old(Circuit , k_qbits_idx , q_qbits_idx , dagger= False):\n",
+    "    # Apply i\\omega \\sum_l=j^q (-1)^k_l\n",
+    "    # Omega is a global variable\n",
+    "    k_qbits = Circuit.qregs[k_qbits_idx]\n",
+    "    q_qbits = Circuit.qregs[q_qbits_idx]\n",
     "    \n",
-    "    \"\"\"\"\n",
-    "    This is a void function creating the q-dependent controlled diagonal rotations \n",
+    "    delta = 2*Omega*Delta_t # Dividing the angle by 2 for rz\n",
+    "    \n",
+    "    if dagger:\n",
+    "        for l in range(len(k_qbits)-1 , - 1 , -1):\n",
+    "            if l > 0:\n",
+    "                for lk in range(l , -1 , 0):\n",
+    "                    Circuit.crz( delta/((lk+2)*(lk+1)) , q_qbits[l] , k_qbits[l-lk])\n",
+    "            Circuit.crz( -(l+1)*delta/(l+2) , q_qbits[l]  , k_qbits[l])\n",
+    "    else:\n",
+    "        for l in range(len(k_qbits)):\n",
+    "            Circuit.crz((l+1)*delta/(l+2) , q_qbits[l] , k_qbits[l])\n",
+    "            if l > 0:\n",
+    "                for lk in np.arange(1 , l+1):\n",
+    "                    Circuit.crz(-delta/((lk+2)*(lk+1)) , q_qbits[l] , k_qbits[l - lk])\n",
     "\n",
-    "    Input (QuantumCircuit) #0: The void variable which is a quantum circuit on which U_c\\omega is appended\n",
-    "    Input (double) #1 (delta_t): Specifying the rotation amount, for which a U_0( delta_t/(q+1) ) will be applied \n",
-    "    Input (int) #2 (q_qbits): The quantum register (not the index) of the q qubits\n",
-    "    Input (int) #3 (z_qbits): The quantum register of the z qubits\n",
-    "    Input (bool) #4 (dagger): Speficies whether the gate is hermitian conjugate of the gate or not \n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
+    "def U0_q_ctrl( Circuit , delta_t , q_qbits , z_qbits , dagger=False):\n",
     "    if dagger:\n",
     "        for k in range(len(q_qbits)-1 , 0 , -1):\n",
     "            CUk = Diagonal_U0( Longit_h , Vx , delta_t/((k+1)*(k+2)) )\n",
@@ -353,8 +385,8 @@
     "    Umap = UnitMap(mapping_vec , False)\n",
     "    \n",
     "    if dagger:\n",
-    "        for i in range(Q-1 , -1 , -1):\n",
-    "            Circuit.append(Umapdag , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
+    "        #for i in range(Q-1 , -1 , -1):\n",
+    "        #    Circuit.append(Umapdag , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
     "        for i in range(Q-1 , -1 , -1):\n",
     "            Circuit.ch(iq_qbits[i*L] , kq_qbits[i])\n",
     "        for i in range(Q-1 , -1 , -1):\n",
@@ -367,8 +399,8 @@
     "            Circuit.ch(iq_qbits[i*L] , kq_qbits[i])\n",
     "        for i in range(Q):\n",
     "            Circuit.cx(iq_qbits[i*L] , q_qbits[i])\n",
-    "        for i in range(Q):\n",
-    "            Circuit.append(Umap , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
+    "        #for i in range(Q):\n",
+    "        #    Circuit.append(Umap , iq_qbits[list(np.arange(i*L , (i+1)*L))])\n",
     "    \n",
     "def W_gate(Circuit , current_time , kq_qbits_idx , iq_qbits_idx , z_qbits_idx , q_qbits_idx , dagger = False):\n",
     "    B_prepare( Circuit , kq_qbits_idx , iq_qbits_idx , q_qbits_idx , False )\n",
@@ -388,9 +420,12 @@
     "    kq_qbits = Circuit.qregs[kq_qbits_index]\n",
     "    iq_qbits = Circuit.qregs[iq_qbits_index]\n",
     "    z_qbits = Circuit.qregs[z_qbits_index]\n",
+    "    # print( f'the r number is: {r_number}' )\n",
     "    for ri in range( r_number ):\n",
     "        A_gate( Circuit , ri*Delta_t , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index )\n",
     "        Circuit.append( Diagonal_U0(Longit_h , Vx , Delta_t) , z_qbits )\n",
+    "        #W_gate( Circuit , 0 , 1 , 2 , 4 , False )\n",
+    "    # print( f'Circuit is prepared and ready for simulation' )\n",
     "\n",
     "def Make_initial_state_old(init_zstate):    \n",
     "    Nkq = int(np.log2(K)) * Q\n",
@@ -447,8 +482,6 @@
     }
    ],
    "source": [
-    "# Initializing and preparing the circuit\n",
-    "\n",
     "Nkq = int(np.log2(K))*Q\n",
     "Niq = int(np.log2(n))*Q\n",
     "Ntotal = Nkq + Niq + n + 2 + Q\n",
