--- a/Floquet_IBM.ipynb
+++ b/Floquet_IBM.ipynb
@@ -315,12 +315,22 @@
     "\n",
     "# UC_Phi(iq_qbits , z_qbits , q) generates the E_z_iq and E_z_ij related phases on |z>\n",
     "def Uc_Phi(Circuit  , iq_qbits_idx , z_qbits_idx , q_qbits_idx , dagger=False):\n",
+    "    \"\"\"\n",
+    "    This is a void function creating the q-dependent controlled rotations due to the off-diagonal expansion.\n",
+    "\n",
+    "    Input (QuantumCircuit) #0: The void variable which is a quantum circuit on which U_c\\omega is appended\n",
+    "    Input (int) #1 (iq_qbits_idx): The index of the register of the |i_q> qubits\n",
+    "    Input (int) #2 (z_qbits_idx): The index of the register of the |z> qubits\n",
+    "    Input (int) #3 (q_qbits_idx): The index of the register of the |q> qubits\n",
+    "    Input (bool) #4 (dagger): Speficies whether the gate is hermitian conjugate of the gate or not \n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    iq_qbits = Circuit.qregs[iq_qbits_idx]\n",
     "    q_qbits = Circuit.qregs[q_qbits_idx]\n",
     "    z_qbits = Circuit.qregs[z_qbits_idx]\n",
     "    liq = iq_qbits.size\n",
     "    if dagger:\n",
-    "        # Circuit.append( Diagonal_U0( Longit_h , Vx , Delta_t ) , z_qbits )\n",
     "        U0_q_ctrl( Circuit , -Delta_t*Q , q_qbits , z_qbits , False)\n",
     "        for j in range(Q , 0 , -1):\n",
     "            Uc_P( Circuit , iq_qbits_idx , z_qbits_idx , j , dagger )\n",
@@ -339,6 +349,17 @@
     "\n",
     "\n",
     "def B_prepare(Circuit , kq_qbits_idx , iq_qbits_idx , q_qbits_idx ,  dagger=False):\n",
+    "    \"\"\"\n",
+    "    This is a void function preparing the states on |i_q> , |k_q> , and |q> registers.\n",
+    "\n",
+    "    Input (QuantumCircuit) #0: The void variable which is a quantum circuit on which U_c\\omega is appended\n",
+    "    Input (int) #1 (kq_qbits_idx): The index of the register of the |k_q> qubits\n",
+    "    Input (int) #2 (iq_qbits_idx): The index of the register of the |i_q> qubits\n",
+    "    Input (int) #3 (q_qbits_idx): The index of the register of the |q> qubits\n",
+    "    Input (bool) #4 (dagger): Speficies whether the gate is hermitian conjugate of the gate or not \n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
     "    mapping_vec = np.zeros((1 , n-1))\n",
     "    for i in np.arange(1,n):\n",
     "        mapping_vec[0][i-1] = np.sqrt( Gammaf([i]) )\n",
@@ -377,6 +398,8 @@
     "    B_prepare( Circuit , kq_qbits_idx , iq_qbits_idx , q_qbits_idx , True )\n",
     "\n",
     "def A_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index ):\n",
+    "    # This function prepares the entire circuit for amplitude amplification\n",
+    "    \n",
     "    anc_qubits_index = 3\n",
     "    W_gate( Circuit , current_time , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , False )\n",
     "    R_gate( Circuit , kq_qbits_index , iq_qbits_index , anc_qubits_index , q_qbit_index )\n",
