Generalized B_prepare.. Need to be tested!

--- a/Troterrization.ipynb
+++ b/Troterrization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,20 @@
     "import numpy as np\n",
     "from qiskit_algorithms import TimeEvolutionProblem , TrotterQRTE\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit.circuit.library import EfficientSU2\n"
+    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit_aer import Aer\n",
+    "from qiskit import transpile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "# Define the system parameters\n",
-    "N = 4        # Number of qubits\n",
+    "N = 2        # Number of qubits\n",
     "h = 1.0      # Coefficient for the Z_i terms\n",
     "V = 1.0      # Coefficient for the Z_i Z_{i+1} terms\n",
     "c0 = 1.0     # Coefficient for the time-dependent X_i X_{i+1} terms\n",
@@ -35,34 +36,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "Trotter_circ = qk.QuantumCircuit(N)\n",
-    "time_param = Parameter('t')\n",
-    "cos_term = Parameter('cos_term')  # This will be evaluated as c0 * cos(omega * t)\n",
+    "\n",
     "time_step = 1.0 / omega \n",
+    "num_trotter_steps = int( total_time / time_step )\n",
     "\n",
+    "t_value = time_step\n",
+    "cos_factor = c0 * np.cos(omega * t_value)\n",
     "\n",
-    "\n",
-    "# Number of Trotter steps\n",
-    "num_trotter_steps = 10\n",
     "for _ in range(num_trotter_steps):\n",
     "    # Z terms\n",
     "    for i in range(N):\n",
-    "        circuit.rz(2 * h * time_param, i)\n",
+    "        Trotter_circ.rz(2 * h * time_step , i)\n",
     "    \n",
     "    # ZZ terms\n",
     "    for i in range(N - 1):\n",
-    "        circuit.rzz(2 * V * time_param, i, i + 1)\n",
+    "        Trotter_circ.rzz(2 * V * time_step , i, i + 1)\n",
     "    \n",
     "    # XX terms with the time-dependent cosine factor\n",
     "    for i in range(N - 1):\n",
-    "        circuit.rxx(2 * cos_term * time_param, i, i + 1)\n",
+    "        Trotter_circ.rxx(2 * cos_factor * time_step , i, i + 1)\n",
     "\n",
+    "simulator = Aer.get_backend('aer_simulator')\n",
+    "transpiled_circuit = transpile(Trotter_circ, simulator)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ┌───────┐                ┌──────────────┐   ┌───────┐                    »\n",
+      "q_0: ┤ Rz(2) ├─■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "     ├───────┤ │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "q_1: ┤ Rz(2) ├─■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "     ├───────┤         │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "q_2: ┤ Rz(2) ├─────────■───────────■──────────┤1             ├┤0             ├»\n",
+      "     ├───────┤                     │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "q_3: ┤ Rz(2) ├─────────────────────■──────────────────────────┤1             ├»\n",
+      "     └───────┘                                                └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐   ┌───────┐                    »\n",
+      "«q_0: ──■──────────────┤0             ├───┤ Rz(2) ├────────────────────»\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──┴───────┴───┐   ┌───────┐    »\n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├───┤ Rz(2) ├────»\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──┴───────┴───┐»\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├»\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │»\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├»\n",
+      "«     └───────┘                                        └──────────────┘»\n",
+      "«                      ┌──────────────┐                                \n",
+      "«q_0: ──■──────────────┤0             ├────────────────────────────────\n",
+      "«       │ZZ(2)         │  Rxx(1.0806) │┌──────────────┐                \n",
+      "«q_1: ──■───────■──────┤1             ├┤0             ├────────────────\n",
+      "«     ┌───────┐ │ZZ(2) └──────────────┘│  Rxx(1.0806) │┌──────────────┐\n",
+      "«q_2: ┤ Rz(2) ├─■───────────■──────────┤1             ├┤0             ├\n",
+      "«     ├───────┤             │ZZ(2)     └──────────────┘│  Rxx(1.0806) │\n",
+      "«q_3: ┤ Rz(2) ├─────────────■──────────────────────────┤1             ├\n",
+      "«     └───────┘                                        └──────────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(transpiled_circuit.draw())"
    ]
   },
   {
