--- a/Floquet_IBM_new.ipynb
+++ b/Floquet_IBM_new.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:8: DeprecationWarning: The qiskit.extensions module is deprecated since Qiskit 0.46.0. It will be removed in the Qiskit 1.0 release.\n",
+      "  from qiskit.extensions import Initialize , UnitaryGate\n",
+      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:9: DeprecationWarning: Importing from 'qiskit.providers.aer' is deprecated. Import from 'qiskit_aer' instead, which should work identically.\n",
+      "  from qiskit.providers.aer import AerSimulator\n",
+      "/var/folders/y7/l21gv11s0fl71s2rjkzl_w1r0000gn/T/ipykernel_52188/3652294030.py:12: DeprecationWarning: The package qiskit_ibm_provider is being deprecated. Please see https://docs.quantum.ibm.com/api/migration-guides/qiskit-runtime to get instructions on how to migrate to qiskit-ibm-runtime (https://github.com/Qiskit/qiskit-ibm-runtime).\n",
+      "  from qiskit_ibm_provider import IBMProvider\n",
       "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:86: SyntaxWarning: invalid escape sequence '\\o'\n",
       "  \"\"\"\n",
       "/Users/armanbabakhani/Dropbox/Research/Itay/QuantumCircuits/Qiskit/Quantum_Circuit_Github/Quantum_Circuits_Floquet/pmr_lcu.py:200: SyntaxWarning: invalid escape sequence '\\o'\n",
@@ -48,21 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#====================== Circuit Paramters ================\n",
-    "n = 2 # number of particles (qubits)\n",
+    "number_of_spins = 2 # number of particles (qubits)\n",
     "C0 = 1.0 # Parameter for the floquet interaction strength\n",
-    "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,n)]) # there are n elements in this array\n",
+    "Coeffs = C0*np.array([2+(-1)**x for x in np.arange(1,number_of_spins)]) # there are n elements in this array\n",
     "Omega = 1.0\n",
-    "Longit_h = h0*np.array([1.5 + 0.5*(-1)**x for x in range(n)])\n",
+    "h0 = 1.0\n",
+    "Longit_h = h0*np.array([1.5 + 0.5*(-1)**x for x in range(number_of_spins)])\n",
     "Vx = 1.0\n",
     "C = np.max(Coeffs)\n",
     "\n",
     "Gammas = (1.0/2.0)*Coeffs\n",
-    "Q = 2\n",
+    "Qmax = 2\n",
     "\n",
     "# Defining the off-diagonal Gamma function \n",
     "def Gamma_function(iq):\n",
@@ -72,34 +79,39 @@
     "        G = G*(2 + (-1)**iq[j])\n",
     "    return G*(C0 / 2)**q\n",
     "\n",
-    "Gam = np.sum([Gammaf([x]) for x in np.arange(1, n)])\n",
+    "Gam = np.sum([Gamma_function([x]) for x in np.arange(1, number_of_spins)])\n",
     "Delta_t = np.log(2)/Gam\n",
     "GDt = Gam*Delta_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Circuit Prepared! The parameters are:  Vx = 1.0 , hs = [2. 1.] , Omega = 1.0 , C0 = 1.0 , Q = 2 , Gamma = 1.0 , Delta_t = 0.6931471805599453 , GDt = 0.6931471805599453\n"
+     "ename": "TypeError",
+     "evalue": "Prepare_full_unitary() missing 4 required positional arguments: 'iq_qbits_index', 'z_qbits_index', 'q_qbit_index', and 'r_number'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\u001b[39;00m\n\u001b[1;32m     21\u001b[0m FullCirc \u001b[38;5;241m=\u001b[39m qk\u001b[38;5;241m.\u001b[39mQuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n\u001b[0;32m---> 22\u001b[0m \u001b[43mPrepare_full_unitary\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mFullCirc\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkq_qbits_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq_qbits_index\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m Ops \u001b[38;5;241m=\u001b[39m SparsePauliOp\u001b[38;5;241m.\u001b[39mfrom_list([(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXIII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIXII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZIII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m) , (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39m(Nkq \u001b[38;5;241m+\u001b[39m Niq)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIZII\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m*\u001b[39mQ , \u001b[38;5;241m1\u001b[39m)])\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCircuit Prepared! The parameters are:  Vx = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mVx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , hs = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mLongit_h\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Omega = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mOmega\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , C0 = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mC0\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Q = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mQ\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Gamma = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mGam\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , Delta_t = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDelta_t\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , GDt = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mGam\u001b[38;5;241m*\u001b[39mDelta_t\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m) \n",
+      "\u001b[0;31mTypeError\u001b[0m: Prepare_full_unitary() missing 4 required positional arguments: 'iq_qbits_index', 'z_qbits_index', 'q_qbit_index', and 'r_number'"
      ]
     }
    ],
    "source": [
-    "Nkq = int(np.log2(K))*Q\n",
-    "Niq = int(np.log2(n))*Q\n",
+    "K = 2     #only two modes -w and w\n",
+    "Nkq = int(np.log2(K))*Qmax\n",
+    "Niq = int(np.log2(number_of_spins))*Qmax\n",
     "Ntotal = Nkq + Niq + n + 2 + Q\n",
     "\n",
     "kqQubits = qk.QuantumRegister(Nkq , '|kq>')\n",
     "iqQubits = qk.QuantumRegister(Niq , '|iq>')\n",
-    "zQubits = qk.QuantumRegister(n + 1 , '|z>') # n+1 st is an ancilla for diagonal rotations!\n",
+    "zQubits = qk.QuantumRegister(number_of_spins + 1 , '|z>') # n+1 st is an ancilla for diagonal rotations!\n",
     "ancQubit = qk.QuantumRegister(1 , '|anc>')\n",
-    "qQubits = qk.QuantumRegister(Q , '|q>')\n",
+    "qQubits = qk.QuantumRegister(Qmax , '|q>')\n",
     "\n",
     "kq_qbits_index = 0\n",
     "iq_qbits_index = 1\n",
@@ -109,10 +121,9 @@
     "\n",
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit , qQubits )\n",
     "\n",
-    "\n",
     "# =========================== Building the circuits  U_0(dt) U_od(dt) ... U_0(dt) U_od(dt) =================================== #\n",
     "FullCirc = qk.QuantumCircuit( kqQubits , iqQubits , zQubits , ancQubit, qQubits )\n",
-    "Prepare_full_unitary( FullCirc , kq_qbits_index, iq_qbits_index , z_qbits_index , q_qbits_index , 1 )\n",
+    "Prepare_full_unitary( FullCirc , number_of_spins , Qmax , current_time , Gamma_function , kq_qbits_index , iq_qbits_index , z_qbits_index , q_qbit_index , r_number ):\n",
     "\n",
     "Ops = SparsePauliOp.from_list([('I'*(Nkq + Niq)+'XIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IXII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'ZIII'+'I'*Q , 1) , ('I'*(Nkq + Niq)+'IZII'+'I'*Q , 1)])\n",
     "\n",
@@ -210,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qiskit_042",
+   "display_name": "qiskit0.42",
    "language": "python",
    "name": "qiskit_0.42"
   },
